@@ -3,5 +3,9 @@ META_SOURCES = sl/meta
 INST_SOURCES = sl/src
 INST_BUILD = sl/build
 
-$(DISTDIR) $(META_SOURCES) $(INST_SOURCES) $(INST_BUILD):
-	mkdir -p $@
+$(DISTDIR): ; mkdir -p $@
+$(META_SOURCES): ; mkdir -p $@
+$(INST_SOURCES): ; mkdir -p $@
+$(INST_BUILD): ; mkdir -p $@
+$(REQDIR): ; mkdir -p $@
+
